testsuite/bsc.typechecker/kind/ClassDefParamGivenNonNumUsedNum.bs
package ClassDefParamGivenNonNumUsedNum () where

class (Foo :: * -> *) a where
    bar :: Bit a

